# JTS-testing

./: README.md
embr/: CMakeLists.txt  embr_hw_plugin.xml  package.xml
embr/include/embr/: embr.h
embr/src/: embr.cpp
knexo_ethercat/: CMakeLists.txt  package.xml
knexo_ethercat/include/: SAMD51Lan9252_ADC.h  aiu_ati_axia80.h  drive_config.h  global_shared_variables.h  knexo_ethercat_master.h  knexo_ethercat_slave.h  knexo_synapticon_dc1k_d2.h  knexo_synapticon_io.h
knexo_ethercat/include/knexo_ethercat/: knexo_ethercat_master.h
knexo_ethercat/msg/: Ethercat.msg
knexo_ethercat/src/: knexo_ethercat_master.cpp
log/: latest_build
svaya_control/: CMakeLists.txt  package.xml
svaya_control/config/: hw_parameters_12kg.yaml  hw_parameters_16kg.yaml  hw_parameters_6kg.yaml  hw_parameters_6kg_aksim.yaml  hw_parameters_6kg_v2.yaml  rviz_config.rviz  svaya_control_node.yaml
svaya_control/launch/: 16kg.launch.py  3kg.launch.py  6kg.launch.py  6kg_v2.launch.py  6kg_v2_aksim.launch.py  7axis.launch.py  7axis.py  JTS.launch.py  emergency_brake_release.launch.py
svaya_control/src/: svaya_launch.cpp
svaya_description/: CMakeLists.txt  package.xml
svaya_description/meshes/collision/: aiu_12_link3.dae  aiu_16_link3.dae  aiu_16_link5.dae  aiu_3_link0.dae  aiu_3_link2.dae  aiu_3_link3.dae  aiu_6_link0.dae  aiu_6_link1.dae  aiu_6_link2.dae  aiu_6_link3.dae  aiu_6_link4.dae  aiu_6_link5.dae  aiu_6_v2_link0.dae  aiu_6_v2_link4.dae  aiu_6_v2_link5.dae  aiu_7_link0.dae  aiu_7_link1.dae  aiu_7_link2.dae  aiu_7_link3.dae  aiu_7_link4.dae  aiu_7_link5.dae  aiu_7_link6.dae  aiu_7_link7.dae  coro_7_link0.dae  coro_7_link1.dae  coro_7_link3.dae  coro_7_link4.dae  coro_7_link5.dae  coro_7_link6.dae
svaya_description/meshes/visual/: aiu_12_link0.dae  aiu_12_link3.dae  aiu_12_link5.dae  aiu_16_link0.dae  aiu_16_link1.dae  aiu_16_link2.dae  aiu_16_link4.dae  aiu_3_link1.dae  aiu_3_link4.dae  aiu_3_link5.dae  aiu_3_link6.dae  aiu_6_v2_link1.dae  aiu_6_v2_link2.dae  aiu_6_v2_link3.dae  aiu_7_link0.dae  aiu_7_link1.dae  aiu_7_link2.dae  aiu_7_link3.dae  aiu_7_link4.dae  aiu_7_link6.dae  coro_7_link2.dae  coro_7_link7.dae
svaya_description/urdf/: JTS.urdf  JTS_embr.urdf  tool.xacro
svaya_hw/: CMakeLists.txt  package.xml  svaya_hw_plugin.xml
svaya_hw/include/svaya_hw/: svaya_hw.h
svaya_hw/src/: svaya_hw.cpp
svaya_joint_state_reader/: CMakeLists.txt  package.xml
svaya_joint_state_reader/include/svaya_joint_state_reader/: joint_state_reader.h
svaya_joint_state_reader/src/: joint_state_reader.cpp
svaya_testing/: CMakeLists.txt  package.xml
svaya_testing/include/svaya_testing/ui/: svayaui.h
svaya_testing/src/: main.cpp  main2.cpp  torq_sensor.cpp  trajectory.csv
svaya_testing/src/ui/: main.cpp  svayaui.cpp  svayaui.ui
svaya_trajectory_publisher/: CMakeLists.txt  package.xml
svaya_trajectory_publisher/include/svaya_trajectory_publisher/: trajectory_publisher.hpp
svaya_trajectory_publisher/src/: trajectory_publisher.cpp
torq_predictor/: CMakeLists.txt  package.xml
torq_predictor/include/torq_predictor/: forward_kinematics.h  torq_predictor.h
torq_predictor/src/: torq_predictor.cpp
util_nodes/: CMakeLists.txt  package.xml
util_nodes/src/: cart_pos.cpp  fk.cpp  test.cpp  torque.cpp
