<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>svaya_trajectory_publisher</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="arjun.unnithan@svayarobotics.com">arjun</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclcpp</depend>
  <depend>trajectory_msgs</depend>
  <depend>svaya_joint_state_reader</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>controller_manager_msgs</depend>




  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
